# strategy-lab

./: .gitignore  README.md  bt_strategies.py  combo_report.py  daily_pnl.py  ema_report.py  maker_backtest.py  pyproject.toml  regime_lab.py  requirements.txt  run_backtest.py  scalp_lab.py  scalp_optimize.py  strategy_lab.py
.claude/: launch.json
scripts/: crontab-with-funding-tracker.txt  dev.sh  overnight-evolve-perp.sh  overnight-evolve.sh  paper-daemon.sh  perp_ab_rescore.py  pm_order.py
src/strategylab/: __init__.py  core.py
src/strategylab/backtest/: fvg.py  maker.py  regime.py  run.py  scalp_optimize.py
src/strategylab/data/: fetch.py  paths.py
src/strategylab/paper/: __init__.py  __main__.py  daemon.py  select.py
src/strategylab/reports/: combo.py  daily_pnl.py  ema.py
src/strategylab/strategies/: scalp.py
src/strategylab/swarm/: __init__.py  engine.py  evolve.py  features.py  genome.py  mirror.py  probe.py  recap.py  run.py  stress.py  trace.py  track.py  track_funding.py
viewer/: binance_account.py  server.py
viewer/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
viewer/frontend/src/: App.tsx  types.ts
viewer/frontend/src/components/: CanvasBox.tsx  Sparkline.tsx  TopNav.tsx
viewer/frontend/src/lib/: api.ts  canvas.ts  colors.ts  format.ts
viewer/frontend/src/pages/binance/: Binance.tsx
viewer/frontend/src/pages/chart/: ChartView.tsx
viewer/frontend/src/pages/dashboard/: Dashboard.tsx  (+1 more)
viewer/frontend/src/styles/: global.css
viewer/static/: dashboard.html  index.html  swarm.html
(+14 files in other folders)
