[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strategylab"
version = "0.1.0"
description = "A local crypto backtesting lab with honest, anti-overfit evaluation and realistic maker execution."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ccxt>=4.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",  # only needed for --format parquet
]

[project.scripts]
sl-fetch       = "strategylab.data.fetch:main"
sl-sweep       = "strategylab.core:main"
sl-backtest    = "strategylab.backtest.run:main"
sl-maker       = "strategylab.backtest.maker:main"
sl-regime      = "strategylab.backtest.regime:main"
sl-scalp       = "strategylab.strategies.scalp:main"
sl-scalp-opt   = "strategylab.backtest.scalp_optimize:main"
sl-ema-report  = "strategylab.reports.ema:main"
sl-combo-report = "strategylab.reports.combo:main"
sl-daily-pnl   = "strategylab.reports.daily_pnl:main"

[tool.setuptools.packages.find]
where = ["src"]
